added done the product variant details
